# baras-macos

./: .gitignore  .markdownlint.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  effect_ids.txt  justfile  latest.json
.github/workflows/: build.yml  release.yml
.planning/: STATE.md
app/: Cargo.toml  Dioxus.toml
app/assets/: data-explorer.css  styles.css
app/src/: api.rs  app.rs  types.rs
app/src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
app/src-tauri/src/: bridge.rs  (+6 more)
cli/: Cargo.toml
cli/src/: commands.rs  context.rs  dir_watcher.rs  lib.rs  main.rs
core/: Cargo.toml
core/src/: combat_event.rs  directory_index.rs  directory_watcher.rs  encounter.rs  file_handler.rs  lib.rs  parser.rs  reader.rs  session_cache.rs
docs/: detecting-combat-end.md  directory-file-management.md  encounter-design.md
docs/wiki/: dsl-reference.md
overlay/: Cargo.toml
overlay/examples/: new_overlays.rs
overlay/src/: class_icons.rs  frame.rs  icons.rs  lib.rs  main.rs  manager.rs  renderer.rs  utils.rs
overlay/src/overlays/: alerts.rs  boss_health.rs  challenges.rs  cooldowns.rs  dot_tracker.rs  effects.rs  effects_ab.rs  meter.rs  metric.rs  mod.rs  notes.rs  personal.rs  raid.rs  timers.rs
overlay/src/platform/: macos.rs  mod.rs  wayland.rs  windows.rs  x11.rs
overlay/src/widgets/: colors.rs  header.rs  labeled_value.rs  mod.rs  progress_bar.rs
parse-worker/src/: main.rs
src/: directory_watcher.rs  encounter.rs  event_models.rs  lib.rs  main.rs  parser.rs  session_cache.rs
src/parser/: tests.rs
types/src/: lib.rs
validate/src/: main.rs
(+308 files in other folders)
