[package]
name = "baras-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
baras-core = { path = "../core" }

# Rendering (cross-platform)
tiny-skia = "0.11"
cosmic-text = "0.12"

# Async runtime
tokio = { version = "1.48", features = ["sync", "rt", "macros"] }

# Platform: Wayland (Linux)
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9"
rustix = { version = "1.0", features = ["fs", "mm"] }

# Platform: X11 (Linux fallback) - TODO
# x11rb = "0.13"

# Platform: Windows - TODO
# [target.'cfg(target_os = "windows")'.dependencies]
# windows-sys = { version = "0.52", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

# Platform: macOS - TODO
# [target.'cfg(target_os = "macos")'.dependencies]
# cocoa = "0.25"
# core-graphics = "0.23"
# objc = "0.2"
